@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-2059] fixed special char treatment in XML export (Aly)
  - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
  - [ZBX-1991] added sequences for autoincrement fields to oracle.sql (Sasha)
  - [ZBX-2045] fixed trigger editor does not preserve element ordering (Vedmak)
